# Azure-RTOS-on-Raspberry-Pi-Pico-RP2040

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  demo_threadx.c  main.c  test.c  tx_initialize_low_level.S
threadx/ports/cortex_m0/gnu/src/: tx_thread_schedule.S
